--- a/1768-Merge-Strings-Alternately/solution.html
+++ b/1768-Merge-Strings-Alternately/solution.html
@@ -1,8 +1,25 @@
 <script>
+
     /**
      * @param {string} word1
      * @param {string} word2
      * @return {string}
+     */
+    var mergeAlternately = function(word1, word2) {
+    let result = '';
+    for (let i = 0; i < Math.max(word1.length, word2.length); i++) {
+        if (i < word1.length) result += word1[i];
+        if (i < word2.length) result += word2[i];
+    }
+    return result;
+    };
+
+    /**
+     * Merges two words alternately.
+     *
+     * @param {string} word1 - The first word.
+     * @param {string} word2 - The second word.
+     * @return {string} - The merged word.
      */
     const mergeAlternately = (word1, word2) => {
         const lenW1 = word1.length;
@@ -10,19 +27,29 @@
         let i = 0;
         let word = [];
 
+        // Merge characters alternately until the end of either word1 or word2
         while (i < lenW1 && i < lenW2) {
             word.push(word1[i], word2[i]);
             i++;
         }
 
+        // If there are remaining characters in word1, append them to the result
         if (i < lenW1) {
             return word.concat(word1.slice(i)).join('');
         }
 
+        // If there are remaining characters in word2, append them to the result
         if (i < lenW2) {
             return word.concat(word2.slice(i)).join('');
         }
 
+        // If both words are of equal length, join the characters alternately
         return word.join('');
     };
+
+    // Examples:
+    mergeAlternately('abc', 'pqr');    // Output: apbqcr
+    mergeAlternately('ab', 'pqrs');    // Output: apbqrs
+    mergeAlternately('abcd', 'pq');    // Output: apbqcd
+    mergeAlternately('cf', 'eee');     // Output: cfeee
 </script>
