chore(1768): divided scripts into sep tags for ease of reading

--- a/1768-merge-strings-alternately/index.html
+++ b/1768-merge-strings-alternately/index.html
@@ -30,7 +30,9 @@
     mergeAlternately1('ab', 'pqrs');    // Output: apbqrs
     mergeAlternately1('abcd', 'pq');    // Output: apbqcd
     mergeAlternately1('cf', 'eee');     // Output: cfeee
+</script>
 
+<script>
     /**
      * Merges two words alternately.
      *
